--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,14 @@
   <script type="module" src="js/inputce2.js"></script>
   <!-- <script src="js/inputce.js"></script> -->
   <script src="js/helper.js" type="text/javascript"></script>
-  <script src="js/customelement.js" type="text/javascript"></script>
-  <script src="js/customelement2.js" type="text/javascript"></script>
+  <!-- <script src="js/customelement.js" type="text/javascript"></script>
+  <script src="js/customelement2.js" type="text/javascript"></script> -->
   <script src="js/customelement3.js" type="text/javascript"></script>
   <script src="ce/primary/input_one_ce.js" type="module"></script>
   <script src="ce/primary/table_one_ce.js" type="module"></script>
-  <script src="ce/primary/divtable_one_ce.js" type="module"></script>
+  <!-- <script src="ce/primary/divtable_one_ce.js" type="module"></script>
   <script src="ce/primary/tr_one_ce.js" type="module"></script>
-  <script src="ce/primary/td_one_ce.js" type="module"></script>
+  <script src="ce/primary/td_one_ce.js" type="module"></script> -->
   <script src="ce/primary/input_number_ce.js" type="module"></script>
   <script src="ce/primary/select_one_ce.js" type="module"></script>
   <script src="ce/primary/select_year_ce.js" type="module"></script>
@@ -31,7 +31,7 @@
   <script src="ce/primary/select_kwhprice_ce.js" type="module"></script>
   <script src="ce/primary/headline_one_ce.js" type="module"></script>
   <script src="ce/primary/headline_label_ce.js" type="module"></script>
-  <script src="ce/primary/button_one_ce.js" type="module"></script>
+  <!-- <script src="ce/primary/button_one_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_input_base_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_input_one_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_input_number_ce.js" type="module"></script>
@@ -40,7 +40,7 @@
   <script src="ce/composed_without_slots/headline_select_year_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_select_inflation_ce.js" type="module"></script>
   <script src="ce/composed_without_slots/headline_select_discount_ce.js" type="module"></script>
-  <script src="ce/composed_without_slots/headline_select_kwhprice_ce.js" type="module"></script>
+  <script src="ce/composed_without_slots/headline_select_kwhprice_ce.js" type="module"></script> -->
   <script src="ce/composed_with_slots/headline_anyselect_ce.js" type="module"></script>
   <script src="ce/composed_with_slots/headline_anyinput_ce.js" type="module"></script>
   <script src="ce/composed_with_slots/anykind_container_one_ce.js" type="module"></script>
