--- a/public/index.html
+++ b/public/index.html
@@ -510,7 +510,7 @@
             <table-one-ce 
                 period 
                 title="Äga" 
-                srdispatch='[
+                celldispatch='[
                     { 
                         "name":"Värme", 
                         "type":"capitalize", 
@@ -548,7 +548,7 @@
         <table-one-ce 
             period 
             title="Hyra" 
-            srdispatch='[
+            celldispatch='[
                 { 
                     "name":"Värme", 
                     "type":"capitalize", 
@@ -600,7 +600,7 @@
         <table-one-ce 
             period 
             title="Summa" 
-            srdispatch='[
+            celldispatch='[
                 { 
                     "name":"Summa Äga", 
                     "type":"sum", 
