Double array with subjects working. Now we have to subscribe to them. mergeMap?

--- a/public/index.html
+++ b/public/index.html
@@ -580,7 +580,8 @@
                         }
                     }
                 ]' 
-                slot="anytable" 
+                slot="anytable"
+                sb='{"channel":"tableown", "subject":"tableown"}' 
                 sr='{
                     "channel": "period", 
                     "subject": "length", 
@@ -668,6 +669,7 @@
                 }
             ]' 
             slot="anytable" 
+            sb='{"channel":"tablerent", "subject":"tablerent"}' 
             sr='{
                     "channel": "period", 
                     "subject": "length", 
@@ -718,7 +720,8 @@
                     }
                 }
             ]' 
-            slot="anytable" 
+            slot="anytable"
+            sb='{"channel":"tablesum", "subject":"tablesum"}' 
             sr='{
                 "channel": "period", 
                 "subject": "length", 
